# dg-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
demo/: Dockerfile.api  README.md  definitions.py  mock_api.py  seed.sql
demo/catalog/: 01_cash_balance.macro  02_orders.macro  06_multi_source_merge.macro  07_mixed_backend.macro  08_s3_file_ingestion.macro
demo/configs/: 01_cash_balance.macro  03_customers_scd2.macro  04_trades_cdc.macro  05_file_ingestion.macro  demo.resource
demo/demo_domain/: definitions.py
demo/demo_domain/configs/: cash_balance.macro  demo.resource
demo/sample_files/: transactions_2026-07-20.csv  transactions_2026-07-21.csv
deploy/: .env.example  dagster.yaml  deploy.ps1  docker-compose.yml  workspace.yaml
docs/: architecture.md  running-pipelines.md
examples/: 01_api_ingestion.macro  02_file_ingestion.macro  03_scd2_snapshot.macro  04_transforms_and_validations.macro  05_cdc_streaming.macro  06_multi_source_merge.macro  07_mixed_backend.macro  08_s3_file_ingestion.macro  resources.resource  s3.resource  snowflake.resource  user_functions_example.py
framework/: __init__.py  validation_check_builder.py
framework/backends/: __init__.py  base.py  postgres.py  registry.py  snowflake.py
framework/backends/postgres/: __init__.py
framework/builder/: __init__.py  asset_builder.py  config_discovery.py  core_loader.py  dependency_builder.py  flow_parser.py  job_builder.py  ref_resolver.py  resources_builder.py  sensor_builder.py
framework/cdc/: __init__.py  capture.py  cdc_builder.py  diff_engine.py  store.py
framework/cdc/model/: events.py  stream_models.py
framework/core/asserts/: __init__.py  assert_api.py  assert_compute.py  assert_db.py  assert_dbt.py  assert_event.py  assert_file.py  assert_registry.py
framework/core/resources/: __init__.py  resource_api.py  resource_config.py  resource_event_dispatcher.py  resource_http.py  resource_logger.py  resource_postgres.py  resource_registry.py  resource_s3.py  resource_snowflake.py  resource_vault.py
framework/core/sensors/: __init__.py  sensor_api_polling.py  sensor_asset_update.py  sensor_cdc.py  sensor_event.py  sensor_file_drop.py  sensor_polling.py  sensor_registry.py  sensor_schedule.py
framework/core/streams/: __init__.py  stream_registry.py  stream_websocket.py
framework/core/utils/: json_to_pd.py
framework/io/: noop.py
framework/model/: config_models.py  resource_models.py
framework/postgres/: pghelper.py  postgres_sql.py
framework/postgres/schema/: apply.py  builder.py
framework/transformation/: __init__.py  builtin_transforms.py  system_context.py  table_transforms.py  transform_registry.py  transformation_context.py  transformation_executor.py
framework/utils/: diff.py  expr_eval.py  file_tracker.py  pd_utils.py  s3_file_tracker.py
framework/validation/: __init__.py  validation_plugins.py
framework/validation/engine/: __init__.py  validation_engine.py  (+1 more)
src/test_domain/: definitions.py
tests/: conftest.py  smoke_test_cdc.py  smoke_test_expr_eval.py  smoke_test_load_all.py  smoke_test_loader.py  smoke_test_macros.py  smoke_test_transforms.py  verify_loader.py
tests/framework/: run_framework_complete.py  run_framework_test.py  smoke_test_file_drop.py  smoke_test_legacy.py  test_api_asset_validations.py  test_db_asset_integration.py  test_file_asset.py  test_framework.py  test_sensor_fix.py  test_to_file.py  test_yaml_resources.py
(+17 files in other folders)
