[project]
name = "framework"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.12",
    "dagster-dbt",
    "dbt-core",
    "dbt-postgres",
    "pandas",
    "psycopg2-binary",
    "pyyaml",
    "dagster_hashicorp",
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "dt>=1.2.1",
    "jmespath>=1.1.0",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "test_domain"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["test_domain", "framework"]
