[project]
name = "dagster-config-framework"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
description = "Config-driven Dagster pipeline framework — build data pipelines from YAML"
license = { text = "MIT" }
dependencies = [
    "dagster==1.12.12",
    "dagster-dbt",
    "dbt-core",
    "dbt-postgres",
    "pandas",
    "psycopg2-binary",
    "pyyaml",
    "dagster_hashicorp",
    "dt>=1.2.1",
    "jmespath>=1.1.0",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
]

authors = [
    { name = "Manoj Pandey", email = "manojpandey23@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/manojpandey23/dg-demo"
Repository = "https://github.com/manojpandey23/dg-demo"
Issues = "https://github.com/manojpandey23/dg-demo/issues"
Documentation = "https://github.com/manojpandey23/dg-demo#readme"

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "ruff>=0.15.7",
    "mypy>=1.15",
    "pre-commit>=4.0",
    "pandas-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framework"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "test_domain"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "SIM"]
ignore = ["E501", "S307", "S603", "S301"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"tests/framework/test_db_asset_integration.py" = ["E402", "S608"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "integration: tests requiring external services (Postgres, APIs)",
]

[tool.coverage.run]
source = ["framework"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
